--- a/portfolio.html
+++ b/portfolio.html
@@ -82,31 +82,101 @@
     <div class="trabajos">
         <div class="container">
             <div class="row">
-                <div class="col-md-4 col-sm-4 col-xs-4">
-                    <div class="thumbnail">
-                        <img src="images/portfolio/full/item3.jpg" alt=""> 
-                        <div class="caption">
-                            <h5>Nova- corporate site template</h5>
+                <div class="col-md-4 col-sm-4 col-xs-4">                    
+                    <a id="modal-461833" href="#modal-container-461833" role="button" data-toggle="modal">
+                        <div class="thumbnail">
+                            <img src="images/portfolio/full/item3.jpg" alt=""> 
+                            <div class="caption">
+                                <h5>Nova- corporate site template</h5>
+                            </div>
                         </div>
-                    </div>
+                    </a>                        
                 </div>
-                <div class="col-md-4  col-sm-4 col-xs-4">
-                    <div class="thumbnail">
-                        <img src="images/portfolio/full/item2.jpg" alt=""> 
-                        <div class="caption">
-                            <h5>Nova- corporate site template</h5>
-                        </div>
-                    </div>
-
+                <div class="modal fade" id="modal-container-461833" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">                                 
+                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                                    ×
+                                </button>
+                                <h4 class="modal-title" id="myModalLabel">
+                                    Portfolio
+                                </h4>
+                            </div>
+                            <div class="modal-body text-center">
+                                <img src="images/portfolio/full/item3.jpg" alt=""> 
+                            </div>
+                            <div class="modal-footer">                                 
+                                <button type="button" class="btn btn-default" data-dismiss="modal">
+                                    Cerrar
+                                </button> 
+                            </div>
+                        </div>                                    
+                    </div>                                
                 </div>
-                <div class="col-md-4 col-sm-4 col-xs-4">
-                    <div class="thumbnail">
-                        <img src="images/portfolio/full/item3.jpg" alt=""> 
-                        <div class="caption">
-                            <h5>Nova- corporate site template</h5>
+                <div class="col-md-4 col-sm-4 col-xs-4">                    
+                    <a id="modal-4618332" href="#modal-container-4618332" role="button" data-toggle="modal">
+                        <div class="thumbnail">
+                            <img src="images/portfolio/full/item2.jpg" alt=""> 
+                            <div class="caption">
+                                <h5>Nova- corporate site template</h5>
+                            </div>
                         </div>
-                    </div>
-
+                    </a>                        
+                </div>
+                <div class="modal fade" id="modal-container-4618332" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">                                 
+                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                                    ×
+                                </button>
+                                <h4 class="modal-title" id="myModalLabel">
+                                    Portfolio
+                                </h4>
+                            </div>
+                            <div class="modal-body text-center">
+                                <img src="images/portfolio/full/item2.jpg" alt=""> 
+                            </div>
+                            <div class="modal-footer">                                 
+                                <button type="button" class="btn btn-default" data-dismiss="modal">
+                                    Cerrar
+                                </button> 
+                            </div>
+                        </div>                                    
+                    </div>                                
+                </div>
+                <div class="col-md-4 col-sm-4 col-xs-4">                    
+                    <a id="modal-4618333" href="#modal-container-4618333" role="button" data-toggle="modal">
+                        <div class="thumbnail">
+                            <img src="images/portfolio/full/item3.jpg" alt=""> 
+                            <div class="caption">
+                                <h5>Nova- corporate site template</h5>
+                            </div>
+                        </div>
+                    </a>                        
+                </div>
+                <div class="modal fade" id="modal-container-4618333" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">                                 
+                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                                    ×
+                                </button>
+                                <h4 class="modal-title" id="myModalLabel">
+                                    Portfolio
+                                </h4>
+                            </div>
+                            <div class="modal-body text-center">
+                                <img src="images/portfolio/full/item3.jpg" alt=""> 
+                            </div>
+                            <div class="modal-footer">                                 
+                                <button type="button" class="btn btn-default" data-dismiss="modal">
+                                    Cerrar
+                                </button> 
+                            </div>
+                        </div>                                    
+                    </div>                                
                 </div>
             </div>
         </div>
@@ -115,31 +185,101 @@
     <div class="trabajos">
         <div class="container">
             <div class="row">
-                <div class="col-md-4  col-sm-4 col-xs-4">
-                    <div class="thumbnail">
-                        <img src="images/portfolio/full/item4.jpg" alt=""> 
-                        <div class="caption">
-                            <h5>Nova- corporate site template</h5>
+                <div class="col-md-4 col-sm-4 col-xs-4">                    
+                    <a id="modal-4618334" href="#modal-container-4618334" role="button" data-toggle="modal">
+                        <div class="thumbnail">
+                            <img src="images/portfolio/full/item4.jpg" alt=""> 
+                            <div class="caption">
+                                <h5>Nova- corporate site template</h5>
+                            </div>
                         </div>
-                    </div>
+                    </a>                        
                 </div>
-                <div class="col-md-4  col-sm-4 col-xs-4">
-                    <div class="thumbnail">
-                        <img src="images/portfolio/full/item5.jpg" alt=""> 
-                        <div class="caption">
-                            <h5>Nova- corporate site template</h5>
-                        </div>
-                    </div>
-
+                <div class="modal fade" id="modal-container-4618334" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">                                 
+                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                                    ×
+                                </button>
+                                <h4 class="modal-title" id="myModalLabel">
+                                    Portfolio
+                                </h4>
+                            </div>
+                            <div class="modal-body text-center">
+                                <img src="images/portfolio/full/item3.jpg" alt=""> 
+                            </div>
+                            <div class="modal-footer">                                 
+                                <button type="button" class="btn btn-default" data-dismiss="modal">
+                                    Cerrar
+                                </button> 
+                            </div>
+                        </div>                                    
+                    </div>                                
                 </div>
-                <div class="col-md-4 col-sm-4 col-xs-4">
-                    <div class="thumbnail">
-                        <img src="images/portfolio/full/item6.jpg" alt=""> 
-                        <div class="caption">
-                            <h5>Nova- corporate site template</h5>
+                <div class="col-md-4 col-sm-4 col-xs-4">                    
+                    <a id="modal-4618335" href="#modal-container-4618335" role="button" data-toggle="modal">
+                        <div class="thumbnail">
+                            <img src="images/portfolio/full/item5.jpg" alt=""> 
+                            <div class="caption">
+                                <h5>Nova- corporate site template</h5>
+                            </div>
                         </div>
-                    </div>
-
+                    </a>                        
+                </div>
+                <div class="modal fade" id="modal-container-4618335" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">                                 
+                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                                    ×
+                                </button>
+                                <h4 class="modal-title" id="myModalLabel">
+                                    Portfolio
+                                </h4>
+                            </div>
+                            <div class="modal-body text-center">
+                                <img src="images/portfolio/full/item5.jpg" alt=""> 
+                            </div>
+                            <div class="modal-footer">                                 
+                                <button type="button" class="btn btn-default" data-dismiss="modal">
+                                    Cerrar
+                                </button> 
+                            </div>
+                        </div>                                    
+                    </div>                                
+                </div>
+                <div class="col-md-4 col-sm-4 col-xs-4">                    
+                    <a id="modal-4618336" href="#modal-container-4618336" role="button" data-toggle="modal">
+                        <div class="thumbnail">
+                            <img src="images/portfolio/full/item6.jpg" alt=""> 
+                            <div class="caption">
+                                <h5>Nova- corporate site template</h5>
+                            </div>
+                        </div>
+                    </a>                        
+                </div>
+                <div class="modal fade" id="modal-container-4618336" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">                                 
+                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                                    ×
+                                </button>
+                                <h4 class="modal-title" id="myModalLabel">
+                                    Portfolio
+                                </h4>
+                            </div>
+                            <div class="modal-body text-center">
+                                <img src="images/portfolio/full/item3.jpg" alt=""> 
+                            </div>
+                            <div class="modal-footer">                                 
+                                <button type="button" class="btn btn-default" data-dismiss="modal">
+                                    Cerrar
+                                </button> 
+                            </div>
+                        </div>                                    
+                    </div>                                
                 </div>
             </div>
         </div>
@@ -242,9 +382,12 @@
 
     <div class="col-md-3">
         <h3>Address</h3>
-        <h5><strong>Twitter, Inc</strong></h5>
-        <p>795 Folsom Ave, Suite 600 San Francisco CA 941077</p>
-        <p>P: (123) 456-7890</p>
+        <address>
+          <strong>Twitter, Inc.</strong><br>
+          1355 Market Street, Suite 900<br>
+          San Francisco, CA 94103<br>
+          <abbr title="Phone">P:</abbr> (123) 456-7890
+        </address>
         <div class="go">
             <h3>Newsletter</h3>
             <div class="input-group">
