--- a/blog-item.html
+++ b/blog-item.html
@@ -353,9 +353,12 @@
 
     <div class="col-md-3">
         <h3>Address</h3>
-        <h5><strong>Twitter, Inc</strong></h5>
-        <p>795 Folsom Ave, Suite 600 San Francisco CA 941077</p>
-        <p>P: (123) 456-7890</p>
+        <address>
+          <strong>Twitter, Inc.</strong><br>
+          1355 Market Street, Suite 900<br>
+          San Francisco, CA 94103<br>
+          <abbr title="Phone">P:</abbr> (123) 456-7890
+        </address>
         <div class="go">
             <h3>Newsletter</h3>
             <div class="input-group">
